# pockettts-coqui-bridge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py
app/api/: auth.py  health.py  tts.py  ui.py  voices.py
app/services/: audio.py  auth.py  pockettts.py  voice_registry.py
app/static/: styles.css
app/templates/: api_keys.html  base.html  index.html  login.html  settings.html  voices.html  voices_new.html
docs/: PLAN.md  TASKS.md
prompts/: discord_command_prompt.md
src/pockettts_bridge/: __init__.py  cli.py
tests/: test_api.py  test_api_keys.py  test_cli.py  test_token_reload.py
